--- a/Plastic.csproj
+++ b/Plastic.csproj
@@ -12,10 +12,14 @@
     <AssemblyName>Plastic</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>Plastic</SccProjectName>
-    <SccLocalPath>5~f957de65-df0a-4c00-a598-f033184555e1</SccLocalPath>
-    <SccAuxPath>http://inedoappsv1/VaultService</SccAuxPath>
-    <SccProvider>SourceGear Vault Visual Studio 2005 Client:{1EA47954-8515-402d-82D9-B5C332120A8D}</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -61,9 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PlasticProvider.cs" />
-    <Compile Include="PlasticProviderEditor.cs">
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
+    <Compile Include="PlasticProviderEditor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorkspaceInfo.cs" />
   </ItemGroup>
