--- a/Plastic.csproj
+++ b/Plastic.csproj
@@ -65,7 +65,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PlasticProvider.cs" />
-    <Compile Include="PlasticProviderEditor.cs" />
+    <Compile Include="PlasticProviderEditor.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorkspaceInfo.cs" />
   </ItemGroup>
